Web.config ParlamentoWeb

--- a/ParlamentoWeb/app/shared/header.partial.html
+++ b/ParlamentoWeb/app/shared/header.partial.html
@@ -26,7 +26,7 @@
                     <li>
                         <a ng-click="vm.logout()" class="btn text-left-i">
                             <i class="fa fa-sign-out"></i>
-                            Logout
+                            Sair
                         </a>
                     </li>
                 </ul>
