--- a/ParlamentoWeb/index.html
+++ b/ParlamentoWeb/index.html
@@ -33,6 +33,7 @@
     <script src="/assets/libs/iCheck/icheck.min.js"></script>
     <!-- Angular Libs -->
     <script src="assets/libs/angular-ui-router.min.js"></script>
+    <script src="assets/libs/angular-resource.min.js"></script>
     <script src="assets/libs/angular-messages.min.js"></script>
     <script src="assets/libs/angular-mocks.js"></script>
     <script src="assets/libs/ngStorage.min.js"></script>
@@ -42,6 +43,7 @@
     <script src="app/app.run.js"></script>
     <!-- Angular Services -->
     <script src="app/services/authentication.service.js"></script>
+    <script src="app/services/rest.service.js"></script>
     <!-- Angular Controllers -->
     <script src="app/main.controller.js"></script>
     <script src="app/components/login/login.controller.js"></script>
