--- a/ParlamentoWeb/app/shared/menu.partial.html
+++ b/ParlamentoWeb/app/shared/menu.partial.html
@@ -13,15 +13,15 @@
         <li class="header">MENU PRINCIPAL</li>
         <li class="treeview">
             <a ui-sref="home">
-                <i class="fa fa-users"></i> <span>Senadores</span>
-                <span class="pull-right-container">
-                    <i class="fa fa-angle-left pull-right"></i>
-                </span>
+                <i class="fa fa-dashboard"></i> <span>Dashboard</span>
             </a>
-            <ul class="treeview-menu">
-                <li><a ui-sref="#"><i class="fa fa-circle-o"></i> Por Estado</a></li>
-                <li><a ui-sref="#"><i class="fa fa-circle-o"></i> Por Patido</a></li>
-            </ul>
+            <ul class="treeview-menu"></ul>
+        </li>
+        <li class="treeview">
+            <a ui-sref="senadores">
+                <i class="fa fa-users"></i> <span>Senadores</span>
+            </a>
+            <ul class="treeview-menu"></ul>
         </li>
     </ul>
 </section>
