--- a/ParlamentoWeb/index.html
+++ b/ParlamentoWeb/index.html
@@ -47,11 +47,13 @@
     <!-- Angular Services -->
     <script src="app/services/authentication.service.js"></script>
     <script src="app/services/rest.service.js"></script>
+    <!-- Angular Directives -->
+    <script src="app/directives/convertToNumber.directive.js"></script>
     <!-- Angular Controllers -->
     <script src="app/main.controller.js"></script>
     <script src="app/components/login/login.controller.js"></script>
     <script src="app/components/register/register.controller.js"></script>
-    <script src="app/components/home/home.controller.js"></script>
+    <script src="app/components/dashboard/dashboard.controller.js"></script>
     <script src="app/components/senadores/senadores.controller.js"></script>
     <!-- Angular Fake Backend -->
     <script src="app/helpers/fake-backend.js"></script>
