--- a/ParlamentoWeb/app/shared/header.partial.html
+++ b/ParlamentoWeb/app/shared/header.partial.html
@@ -14,7 +14,7 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                     <i class="fa fa-user"></i>&nbsp;&nbsp;&nbsp;
-                    <span class="hidden-xs">{{vm.fullName}}</span>
+                    <span class="hidden-xs">{{vm.nomeCompleto}}</span>
                 </a>
                 <ul class="dropdown-menu">
                     <li>
