--- a/ParlamentoWeb/index.html
+++ b/ParlamentoWeb/index.html
@@ -20,7 +20,9 @@
     <!-- Fonts -->
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 </head>
-<body class="hold-transition fixed ng-cloak" ng-cloak ng-class="{'login-page': $state.current.name == 'login', 'skin-blue-light sidebar-mini': $state.current.name != 'login' }">
+<body class="hold-transition fixed ng-cloak" ng-cloak 
+      ng-class="{'login-page': $state.current.name == 'login', 'register-page': $state.current.name == 'registro',
+                 'skin-blue-light sidebar-mini': $state.current.name != 'login' && $state.current.name != 'registro' }">
     <div ng-class="{'wrapper': $state.current.name != 'login' }" ui-view>
         <header class="main-header" ui-view="header"></header>
         <aside class="main-sidebar" ui-view="menu"></aside>
@@ -36,7 +38,6 @@
     <script src="assets/libs/angular-animate.min.js"></script>
     <script src="assets/libs/angular-resource.min.js"></script>
     <script src="assets/libs/angular-messages.min.js"></script>
-    <script src="assets/libs/angular-mocks.js"></script>
     <script src="assets/libs/ngStorage.min.js"></script>
     <script src="assets/libs/angular-ui-router.min.js"></script>
     <script src="assets/libs/ui-bootstrap-tpls-2.2.0.js"></script>
@@ -48,15 +49,17 @@
     <script src="app/services/authentication.service.js"></script>
     <script src="app/services/rest.service.js"></script>
     <!-- Angular Directives -->
+    <script src="app/directives/compare.directive.js"></script>
     <script src="app/directives/convertToNumber.directive.js"></script>
     <!-- Angular Controllers -->
     <script src="app/main.controller.js"></script>
     <script src="app/components/login/login.controller.js"></script>
-    <script src="app/components/register/register.controller.js"></script>
+    <script src="app/components/registro/registro.controller.js"></script>
     <script src="app/components/dashboard/dashboard.controller.js"></script>
     <script src="app/components/senadores/senadores.controller.js"></script>
     <!-- Angular Fake Backend -->
-    <script src="app/helpers/fake-backend.js"></script>
+    <!--<script src="assets/libs/angular-mocks.js"></script>
+    <script src="app/helpers/fake-backend.js"></script>-->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
