Gráficos dos Votos

--- a/ParlamentoWeb/index.html
+++ b/ParlamentoWeb/index.html
@@ -34,7 +34,11 @@
     <script src="assets/js/AdminLTE.min.js"></script>
     <script src="assets/libs/iCheck/icheck.min.js"></script>
     <script src="assets/libs/slimScroll/jquery.slimscroll.min.js"></script>
+    <!-- Highcharts -->
     <script src="assets/libs/Highcharts/code/highcharts.js"></script>
+    <script src="assets/libs/Highcharts/code/highcharts-3d.js"></script>
+    <script src="assets/libs/Highcharts/code/highcharts-more.js"></script>
+    <script src="assets/libs/Highcharts/code/modules/exporting.js"></script>
     <!-- Angular Libs -->
     <script src="assets/libs/angular-animate.min.js"></script>
     <script src="assets/libs/angular-resource.min.js"></script>
@@ -50,15 +54,18 @@
     <script src="app/services/authentication.service.js"></script>
     <script src="app/services/rest.service.js"></script>
     <!-- Angular Directives -->
-    <script src="app/directives/compare.directive.js"></script>
     <script src="app/directives/convertToNumber.directive.js"></script>
+    <script src="app/directives/match.directive.js"></script>
+    <!-- Angular Constants -->
+    <script src="app/constants/estadosBrasileiros.constant.js"></script>
     <!-- Angular Controllers -->
     <script src="app/main.controller.js"></script>
     <script src="app/components/login/login.controller.js"></script>
     <script src="app/components/registro/registro.controller.js"></script>
     <script src="app/components/dashboard/dashboard.controller.js"></script>
-    <script src="app/components/senadores/senadores.controller.js"></script>
     <script src="app/components/senador/votos/votos.controller.js"></script>
+    <script src="app/components/senadores/senadores.controller.js"></script>
+    <script src="app/components/materias/materias.controller.js"></script>
     <!-- Angular Fake Backend -->
     <!--<script src="assets/libs/angular-mocks.js"></script>
     <script src="app/helpers/fake-backend.js"></script>-->
