Filtro Ementa Matéria

--- a/ParlamentoWeb/index.html
+++ b/ParlamentoWeb/index.html
@@ -59,13 +59,13 @@
     <!-- Angular Constants -->
     <script src="app/constants/estadosBrasileiros.constant.js"></script>
     <!-- Angular Controllers -->
-    <script src="app/main.controller.js"></script>
-    <script src="app/components/login/login.controller.js"></script>
-    <script src="app/components/registro/registro.controller.js"></script>
-    <script src="app/components/dashboard/dashboard.controller.js"></script>
-    <script src="app/components/senador/votos/votos.controller.js"></script>
-    <script src="app/components/senadores/senadores.controller.js"></script>
-    <script src="app/components/materias/materias.controller.js"></script>
+    <script src="app/main.controller.js?v=1"></script>
+    <script src="app/components/login/login.controller.js?v=1"></script>
+    <script src="app/components/registro/registro.controller.js?v=1"></script>
+    <script src="app/components/dashboard/dashboard.controller.js?v=1"></script>
+    <script src="app/components/senador/votos/votos.controller.js?v=1"></script>
+    <script src="app/components/senadores/senadores.controller.js?v=1"></script>
+    <script src="app/components/materias/materias.controller.js?v=1"></script>
     <!-- Angular Fake Backend -->
     <!--<script src="assets/libs/angular-mocks.js"></script>
     <script src="app/helpers/fake-backend.js"></script>-->
